# experiment

./: Cargo.toml  DEVELOPMENT.md  EXAMPLES.md  FILE_INDEX.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MVP_ARCHITECTURE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md
.cargo/: config.toml
src/: analyzer.rs  aot_generator.rs  ast.rs  components.rs  game_engine.rs  lib.rs  main.rs  meta_lang.rs  renderer.rs  runtime.rs  scene.rs  shader.wgsl  supercompiler.rs  systems.rs
tests/: components.rs  game_engine.rs  meta_lang.rs  runtime.rs
web/: Cargo.toml  README.md  build.ps1  package.json  playwright.config.js
web/src/: lib.rs
web/static/: bootstrap.js  index.html
web/tests/: app.spec.js
